-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 101004) **
-----------------------------------------------------------------------

About the version numbers... "vX.Y[.Z][-extraT]" :

  X = major version  - the overall development status
  Y = minor version  - represents a set of planned features (see TODO)
  Z = revision       - small changes to major.minor version (optional)

  extraT             - beta, pre and rc releases that are in 
                       preparation of major releases (optional)

-----------------------------------------------------------------------

xx102004 (v2.3.4)  -** stable release **-
	- edi-entries: edi-14 and edi-32 closed, edi-40 added
	- note: verified to compile ok on MacOS X 10.3.2 [smbolton]
	- note: verified to compile ok with gcc-3.4.1
	- added: basic FLAC input/output support using flac utils;
		 new flac specific options to ecasoundrc
	- added: basic AAC/M4A/MP4 input/output support faac/faad
		 utils; new options to ecasoundrc
	- added: optional 3rd parameter to 'sndfile' for specifying 
		 audio file format (see ecasound(1)) [jesse]
	- changed: set srate for mp3 input based on mp3 header
	- fixed: multitrack offset was calculated incorrectly for
		 ALSA devices which limit buffer period count to 2
	- fixed: bugs in .wav, .cdr, JACK code, and in internal sample 
		 conversion routines that occur on big-endian 
		 machines [smbolton]
	- fixed: ogg input if requested sample-format has non-native
		 endianess; new default-cmd for ogg-input, see 
		 ecasoundrc(5)
	- fixed: build failed on MacOSX/freebsd because of undefined 	
		 mlockall and related defines
	- fixed: errors in ecasound(1) man page and the examples.html;
	         adding chain operators to multiple chains at once
		 is not supported
	- fixed: engine state not fully updated after a 'run' 
		 command has completed; caused commands such as