@@ -1,4 +1,4 @@
-.TH "ecasound-iam" "1" "25\&.09\&.2004" "" "Multimedia software" 
+.TH "ecasound-iam" "1" "23\&.10\&.2004" "" "Multimedia software" 
 .PP 
 .SH "NAME" 
 ecasound-iam \- ecasound interactive mode
