@@ -12,7 +12,7 @@ htmlcommand(
 
 manpage(ecasound-iam)
        (1)
-       (25.09.2004)
+       (23.10.2004)
        ()
        (Multimedia software)
 
@@ -487,6 +487,11 @@ Returns a list of all registered EIAM commands. em([S])
 
 dit(int-output-mode-wellformed)
 Select the well-format output format for log messages. em([-])
+
+dit(int-set-float-to-string-precision)
+Sets precision used in float to text conversions. Note that 
+this can be used to control the precision of float return values 
+for ECI commands. em([-])
 
 dit(int-cmd-version-string)
 Returns EIAM parser version string. em([s])
