@@ -40,6 +40,8 @@ material that you'd like to see on this page, mail me (Kai Vehmanen) about it.</
 <!-- ###  new section ### -->
 <p><b>Tutorials and Articles</b></p>
 <ul>
+<li> <a href="http://www.newsforge.com/article.pl?sid=04/10/20/1423245">Using a Linux-based home recording studio</a> (en)
+     - Dave Fancella's article at newsforge.com shows how to use Ecasound, Audacity, Hydrogen and other tools in multitrack recording.</li>
 <li> <a
      href="http://www.agnula.org/documentation/dp_tutorials/no-x/">X-less Audio Tutorial</a> (en)
      - Dave Phillips' Agnula tutorial &quot;X-less Audio: A Brief Guide To Sound & Music Software For The Console&quot; takes a look at the JACK+ecasound combination.</li>
