@@ -138,6 +138,7 @@ class ECA_IAMODE_PARSER_COMMANDS {
     // --
     ec_int_cmd_list,
     ec_int_output_mode_wellformed,
+    ec_int_set_float_to_string_precision,
     ec_int_version_string,
     ec_int_version_lib_current,
     ec_int_version_lib_revision,
