@@ -357,7 +357,7 @@ eci_handle_t eci_init_r(void)
       }
       else {
 	write(eci_rep->cmd_write_fd_rep, "debug 256\n", strlen("debug 256\n"));
-	write(eci_rep->cmd_write_fd_rep, "int-set-float-to-string-precision 12\n", strlen("int-set-float-to-string-precision 12\n"));
+	write(eci_rep->cmd_write_fd_rep, "int-set-float-to-string-precision 17\n", strlen("int-set-float-to-string-precision 17\n"));
 	write(eci_rep->cmd_write_fd_rep, "int-output-mode-wellformed\n", strlen("int-output-mode-wellformed\n"));
 	eci_rep->commands_counter_rep ++;
       
